// Copyright 2025 The Flutter Authors.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

import 'package:collection/collection.dart';
import 'package:flutter/material.dart';

import '../interfaces/surface_context.dart';
import '../model/catalog.dart';
import '../model/catalog_item.dart';
import '../model/data_model.dart';
import '../model/ui_models.dart';
import '../primitives/constants.dart';
import '../primitives/logging.dart';
import '../primitives/simple_items.dart';

/// A callback for when a user interacts with a widget.
typedef UiEventCallback = void Function(UiEvent event);

/// A widget that renders a dynamic UI surface generated by the AI.
///
/// This widget connects to a [SurfaceContext] and renders the UI defined by the
/// [UiDefinition] for the bound surface.
class Surface extends StatefulWidget {
  /// Creates a [Surface].
  const Surface({
    super.key,
    required this.genUiContext,
    this.defaultBuilder,
    this.actionDelegate = const DefaultActionDelegate(),
  });

  /// The context that holds the state of this surface.
  final SurfaceContext genUiContext;

  /// A builder for the widget to display when the surface has no definition.
  final WidgetBuilder? defaultBuilder;

  /// The delegate that handles UI actions.
  final ActionDelegate actionDelegate;

  @override
  State<Surface> createState() => _SurfaceState();
}

class _SurfaceState extends State<Surface> {
  @override
  Widget build(BuildContext context) {
    genUiLogger.fine('Outer Building surface ${widget.genUiContext.surfaceId}');
    return ValueListenableBuilder<UiDefinition?>(
      valueListenable: widget.genUiContext.definition,
      builder: (context, definition, child) {
        genUiLogger.fine('Building surface ${widget.genUiContext.surfaceId}');
        if (definition == null) {
          genUiLogger.info(
            'Surface ${widget.genUiContext.surfaceId} has no definition.',
          );
          return widget.defaultBuilder?.call(context) ??
              const SizedBox.shrink();
        }
        // Implicit root is "root".
        const rootId = 'root';
        if (definition.components.isEmpty ||
            !definition.components.containsKey(rootId)) {
          genUiLogger.warning(
            'Surface ${widget.genUiContext.surfaceId} has no root component.',
          );
          return const SizedBox.shrink();
        }

        final Catalog? catalog = _findCatalogForDefinition(definition);
        if (catalog == null) {
          return Container();
        }

        return _buildWidget(
          definition,
          catalog,
          rootId,
          DataContext(widget.genUiContext.dataModel, '/'),
        );
      },
    );
  }

  /// The main recursive build function.
  /// It reads a widget definition and its current state from
  /// `widget.definition`
  /// and constructs the corresponding Flutter widget.
  Widget _buildWidget(
    UiDefinition definition,
    Catalog catalog,
    String widgetId,
    DataContext dataContext,
  ) {
    Component? data = definition.components[widgetId];
    if (data == null) {
      genUiLogger.severe('Widget with id: $widgetId not found.');
      return Placeholder(child: Text('Widget with id: $widgetId not found.'));
    }

    final JsonMap widgetData = data.properties;
    genUiLogger.finest('Building widget $widgetId');
    return catalog.buildWidget(
      CatalogItemContext(
        id: widgetId,
        data: widgetData,
        type: data.type,
        buildChild: (String childId, [DataContext? childDataContext]) =>
            _buildWidget(
              definition,
              catalog,
              childId,
              childDataContext ?? dataContext,
            ),
        dispatchEvent: _dispatchEvent,
        buildContext: context,
        dataContext: dataContext,
        getComponent: (String componentId) =>
            definition.components[componentId],
        getCatalogItem: (String type) =>
            catalog.items.firstWhereOrNull((item) => item.name == type),
        surfaceId: widget.genUiContext.surfaceId,
      ),
    );
  }

  void _dispatchEvent(UiEvent event) {
    if (widget.actionDelegate.handleEvent(
      context,
      event,
      widget.genUiContext,
      _findCatalogForDefinition,
      _buildWidget,
    )) {
      return;
    }

    // The event comes in without a surfaceId, which we add here.
    final Map<String, Object?> eventMap = {
      ...event.toMap(),
      surfaceIdKey: widget.genUiContext.surfaceId,
    };
    final UiEvent newEvent = event is UserActionEvent
        ? UserActionEvent.fromMap(eventMap)
        : UiEvent.fromMap(eventMap);
    widget.genUiContext.handleUiEvent(newEvent);
  }

  Catalog? _findCatalogForDefinition(UiDefinition definition) {
    final String catalogId = definition.catalogId ?? standardCatalogId;
    final Catalog? catalog = widget.genUiContext.catalogs.firstWhereOrNull(
      (c) => c.catalogId == catalogId,
    );

    if (catalog == null) {
      genUiLogger.severe(
        'Catalog with id "$catalogId" not found for surface '
        '"${widget.genUiContext.surfaceId}". Ensure the catalog is provided to '
        'A2uiMessageProcessor. Available catalogs: '
        '${widget.genUiContext.catalogs.map((c) => c.catalogId).join(', ')}.',
      );
    }
    return catalog;
  }
}

/// A delegate for handling UI actions in [Surface].
///
/// Implement this interface to provide custom handling for specific actions,
/// such as showing modals or navigating.
abstract interface class ActionDelegate {
  /// Handles a [UiEvent].
  ///
  /// Returns `true` if the event was handled, `false` otherwise.
  ///
  /// The [context] is the build context of the [Surface].
  /// The [genUiContext] provides access to the surface state.
  /// The [findCatalog] function helps resolve the catalog for the current
  ///   definition.
  /// The [buildWidget] function allows building widgets from the definition,
  /// useful for rendering content inside modals or dialogs.
  bool handleEvent(
    BuildContext context,
    UiEvent event,
    SurfaceContext genUiContext,
    Catalog? Function(UiDefinition) findCatalog,
    Widget Function(UiDefinition, Catalog, String, DataContext) buildWidget,
  );
}

/// The default action delegate that handles standard actions like 'showModal'.
class DefaultActionDelegate implements ActionDelegate {
  /// Creates a [DefaultActionDelegate].
  const DefaultActionDelegate();

  @override
  bool handleEvent(
    BuildContext context,
    UiEvent event,
    SurfaceContext genUiContext,
    Catalog? Function(UiDefinition) findCatalog,
    Widget Function(UiDefinition, Catalog, String, DataContext) buildWidget,
  ) {
    if (event is UserActionEvent && event.name == 'showModal') {
      final UiDefinition? definition = genUiContext.definition.value;
      if (definition == null) return true;

      final Catalog? catalog = findCatalog(definition);
      if (catalog == null) {
        genUiLogger.severe(
          'Cannot show modal for surface "${genUiContext.surfaceId}" '
          'because a catalog was not found.',
        );
        return true;
      }

      final modalId = event.context['modalId'] as String?;
      if (modalId == null) {
        genUiLogger.severe('Modal action missing "modalId" in context.');
        return true;
      }

      final Component? modalComponent = definition.components[modalId];
      if (modalComponent == null) return true;

      // The 'contentChild' property is expected to be a direct property of the
      // Modal component.
      final contentChildId =
          modalComponent.properties['contentChild'] as String?;

      if (contentChildId == null) {
        genUiLogger.severe('Modal component missing "contentChild" property.');
        return true;
      }

      showModalBottomSheet<void>(
        context: context,
        builder: (context) => buildWidget(
          definition,
          catalog,
          contentChildId,
          DataContext(genUiContext.dataModel, '/'),
        ),
      );
      return true;
    }
    return false;
  }
}
